got that fucking albums working

--- a/bop/etc/defaults.cfg
+++ b/bop/etc/defaults.cfg
@@ -1,5 +1,9 @@
 [config]
-debug = Treu
+#DEBUG set to true allows to make changes without the need of restarting the web server
+debug = True
+#ip address of local machine
 ip_address = 0.0.0.0
+#port number which is running web server
 port = 5000
+#complete url/localhost
 url = http://127.0.0.1:5000
